...
    <TextView
        android:id="@+id/resultado2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.771" />

...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598" />

    <EditText
        android:id="@+id/txtText"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="214dp"
        android:autofillHints=""
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.694" />

    <Button
        android:id="@+id/bttGuardar"
        android:layout_width="130dp"
        android:layout_height="57dp"
        android:background="#FE0000"
        android:clickable="true"
        android:text="Guardar"
        android:textSize="20sp"
...
